Task3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rbear-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: rbear-app
    template:
       metadata:
          labels:
             app: rbear-app
       spec:
          containers:
          - name: rbear-nginx
            image: russianbear107/nginx:1.0
            ports:
              - name: web 
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
