Task3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rbear-service
spec:
  selector:
    app: rbear-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web 
  type: NodePort
